RESOLVED FIXED210039
ARM64 moveConditionallyDouble() for DoubleNotEqualAndOrdered is wrong.
https://bugs.webkit.org/show_bug.cgi?id=210039
Summary ARM64 moveConditionallyDouble() for DoubleNotEqualAndOrdered is wrong.
Mark Lam
Reported 2020-04-05 14:44:45 PDT
For the scenario where the dest register is same as the then case register, there is one case instruction that should be executed based on the overflow flag to test for unordered operands. Instead, we were testing for the not equal condition. This bug was caught by testmasm.
Attachments
proposed patch. (1.91 KB, patch)
2020-04-05 14:53 PDT, Mark Lam
ysuzuki: review+
Radar WebKit Bug Importer
Comment 1 2020-04-05 14:45:12 PDT
Mark Lam
Comment 2 2020-04-05 14:53:10 PDT
Created attachment 395530 [details] proposed patch.
Yusuke Suzuki
Comment 3 2020-04-05 15:55:59 PDT
Comment on attachment 395530 [details] proposed patch. r=me
Mark Lam
Comment 4 2020-04-05 16:00:30 PDT
Thanks for the review. Landed in r259556: <http://trac.webkit.org/r259556>.
Note You need to log in before you can comment on or make changes to this bug.